# CPL_Codes

./: CMakeLists.txt  LICENSE  README.md  test.c  test_git.c
CPL-0-intro/: CMakeLists.txt  Hello.c  homework1.c
CPL2/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  circle2.c  mol.c
CPL3/: CMakeLists.txt  array.c  leap_year.c  min_of_three.c  min_of_two.c
CPL4/: CMakeLists.txt  binary_search.c  digits.c  primes.c  selection_sort.c  stars.c
Homework/: ASCII.c  CMakeLists.txt  Change.c  Equation.c  Gravity.c  Inverse.c  Julian.c  PI.c  Time.c
SDL2_example/: CMakeLists.txt  client.test.c  sever_test.c  test.c
homework10/: CMakeLists.txt  buddy.c  fifa.c  file-management.c  polynlist.c  qianbao_de_bug.c  string-hash.c
homework2/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  obstacle2.c  series.c  single.c
homework3/: CMakeLists.txt  Quick-sort.c  Quick-sort2.c  decimal.c  flip.c  josephus.c  palindrome.c  statistics.c
homework4/: CMakeLists.txt  life.c  matrix-mult.c  mines.c  sudoku.c  trace.c
homework5/: CMakeLists.txt  absolute-prime.c  behaviors.c  magic-square.c  next-permutation.c  radix.c  sum.c
homework6/: CMakeLists.txt  homework6E.c  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
homework7/: CMakeLists.txt  brackets.c  buddy.c  cuboid.c  homework7D.c  pour.c  rotate.c  stack.c  wine.c
homework8/: CMakeLists.txt  interpreter.c  substr.c  substr2.c  title.c
homework9/: parse.c  stringcat.c  tokenizer.c
mid_term_project/: CMakeLists.txt  Calculator.c
