cmake_minimum_required(VERSION 3.23)
project(CPL_Test_Code C)

set(CMAKE_C_STANDARD 11)



add_subdirectory(CPL2)
add_subdirectory(CPL-0-intro)
add_subdirectory(Homework)
add_subdirectory(CPL3)
add_subdirectory(homework2)
add_subdirectory(CPL4)
add_subdirectory(homework3)
add_subdirectory(homework4)
add_subdirectory(homework5)
add_subdirectory(homework6)
add_subdirectory(homework7)
add_subdirectory(homework8)
add_subdirectory(homework9)
add_subdirectory(mid_term_project)
add_subdirectory(homework10)
